--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <title>Mario Jump</title>
 </head>
 <body>
+
+
+    <form class="form">
+        <input type="search"
+        class="input__search"
+        placeholder="Name or Number"
+        required
+        />
+    </form>
      
     <div class="game-board">
 
