--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 </head>
 <body>
 
+
+    <form class="form">
+        <input type="search"
+        class="input__search"
+        placeholder="Name or Number"
+        required
+        />
+    </form>
      
     <div class="game-board">
 
