Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 </head>
 <body>
      
+    <div class="score">score: <span class="score--value">00</span></div>
+
+
     <div class="game-board">
 
         
